--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="todo">todo</string>
+    <string name="send_email">Send Email</string>
 
 </resources>
